Aggiustatati alcune cose